// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allowToChangeInstallationDirectory 1`] = `
Object {
  "win": Array [
    Object {
      "file": "Test Custom Installation Dir Setup 1.1.0.exe",
      "safeArtifactName": "test-custom-inst-dir-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`allowToChangeInstallationDirectory 2`] = `
Object {
  "owner": "foo",
  "provider": "github",
  "repo": "bar",
}
`;

exports[`allowToChangeInstallationDirectory 3`] = `
Object {
  "githubArtifactName": "test-custom-inst-dir-Setup-1.1.0.exe",
  "path": "Test Custom Installation Dir Setup 1.1.0.exe",
  "version": "1.1.0",
}
`;

exports[`boring 1`] = `
Object {
  "win": Array [
    Object {
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`boring, only perMachine 1`] = `
Object {
  "win": Array [
    Object {
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`portable 1`] = `
Object {
  "win": Array [
    Object {
      "file": "Test App ßW 1.1.0.exe",
      "safeArtifactName": "TestApp-1.1.0.exe",
    },
  ],
}
`;
